@@ -1,5 +1,6 @@
 Changelog file for Login component.
 
+- Added autoLogin param to Register snippet
 - Improved password reset functionality
 - Update form fields with new values when reloadOnSuccess=0
 - Replace parseChunk with getChunk
